--- a/ChequeMate/package.json
+++ b/ChequeMate/package.json
@@ -14,10 +14,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@react-navigation/bottom-tabs": "^7.4.5",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.24",
     "@react-navigation/stack": "^7.4.5",
+    "datetimepicker": "^0.1.39",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
     "react": "^19.0.0",
