--- a/ChequeMate/package.json
+++ b/ChequeMate/package.json
@@ -19,15 +19,18 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.24",
     "@react-navigation/stack": "^7.4.5",
+    "axios": "^1.11.0",
     "datetimepicker": "^0.1.39",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
+    "modal": "^0.3.16",
     "react": "^19.0.0",
     "react-native": "^0.79.5",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-masked-text": "^1.13.0",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-pager-view": "^6.7.1",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
