--- a/ChequeMate/package.json
+++ b/ChequeMate/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
@@ -21,28 +21,28 @@
     "@react-navigation/stack": "^7.4.5",
     "axios": "^1.11.0",
     "datetimepicker": "^0.1.39",
-    "expo": "~53.0.20",
-    "expo-status-bar": "~2.2.3",
+    "expo": "54.0.12",
+    "expo-status-bar": "~3.0.8",
     "modal": "^0.3.16",
-    "react": "^19.0.0",
-    "react-native": "^0.79.5",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-animatable": "^1.4.0",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-pager-view": "^6.7.1",
+    "react-native-pager-view": "6.9.1",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "@types/react-native-vector-icons": "^6.4.18",
-    "typescript": "~5.8.3"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
